    - Support for both entity_name and entity_type filtering
    - Listener callbacks receive: content frame, entity, player, registering mod name
  Use Cases:
    - Cross-mod integration (Mod B reacts when Mod A's GUI opens)
    - Overlay/addon mods that enhance other mods' GUIs
    - Logging/analytics mods
    - Adding tooltips or indicators to third-party entity GUIs
  Internal:
    - Added storage.listeners for tracking listener registrations
    - Listeners called after registering mod's on_build/on_close callbacks
    - pcall protection prevents listener errors from breaking core functionality


---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-11-25
  Features:
    - Interactive inventory support for create_inventory_display
      - interactive (boolean) - Enable click-to-transfer items with player cursor
      - read_only (boolean) - Disable transfers even if interactive is true
      - item_filter (table) - Optional whitelist of allowed items
      - on_transfer (string) - Remote callback triggered after item transfers
    - Player inventory panel via show_player_inventory registration option
      - Displays scrollable player inventory alongside custom entity GUIs
      - Fully interactive - click to pick up/place items
      - Works in both normal mode and editor/god mode
    - Shift-click quick transfer between inventories
      - From player inventory to entity inventory and vice versa
      - Stacks with existing items first, then uses empty slots
    - New remote function: refresh_inventory_display(inv_table, inventory)
      - Manually refresh inventory slot visuals without rebuilding GUI
  Interaction Behaviors:
    - Left-click empty slot with cursor item: Insert all items
    - Left-click filled slot with same item: Stack items (respects stack size)
    - Left-click filled slot with different item: Swap items
    - Left-click filled slot with empty cursor: Take all items