@@ -14,6 +14,10 @@ Date: 2025-11-25
     - Overlay/addon mods that enhance other mods' GUIs
     - Logging/analytics mods
     - Adding tooltips or indicators to third-party entity GUIs
+  Bugfixes:
+    - Fixed shift-click transfers from player inventory not refreshing custom GUI content
+      - Previously, shift-clicking from player → entity would not update custom GUI elements (e.g., "Have" columns)
+      - Now triggers the GUI's on_update callback after player → entity shift-click transfers
   Internal:
     - Added storage.listeners for tracking listener registrations
     - Listeners called after registering mod's on_build/on_close callbacks
